Fixed AWFUL appearance on mobile (simplified flex layout of albums)

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ main, footer {
 
 .img-right {
     float: right;
-    width: 240px;
+    width: 200px;
     margin: -10px 10px -10px 0;
 }
 
@@ -68,11 +68,11 @@ main, footer {
 
 .album-container {
     display: flex;
-    flex-direction: row;
-    columns: 3;
-    align-items: flex-start;
-    justify-content: space-between;
+    flex-wrap: wrap;
     color: black;
+    justify-content: space-around;
+    align-items: center;
+
 }
 
 .album-title {
@@ -83,15 +83,17 @@ main, footer {
 }
 
 .album {
+    flex: 300px;
     display: inline-block;
     background-color: rgb(209, 220, 230);
     background-image: url("./images/mosaic-tile.jpg");
     background-repeat: repeat;
     border-radius: 6px;
-    width: 30%;
-    margin: auto;
+    /*width: 30%;*/
+    margin: 10px;
     padding: 5px;
-    height: 560px;
+    max-width: 400px;
+    /*height: 560px;*/
 }
 
 .album-cover {
